# code-map

./: Cargo.toml  README.md  readme.md  rename_crate.sh
.github/workflows/: release.yml
examples/: git_churn.rs
export_html/: index.html
src/: bytes_per_file.rs  cli_args.rs  git_churn.rs  lib.rs  main.rs  metrics.rs  node.rs  tree.rs  treemap.rs  ui.rs
src/arrangements/: binary.rs  golden.rs  linear.rs  square.rs
src/metrics/: bytes_per_file.rs  churn_per_file.rs  lines.rs  word_mentions.rs
src/ui/: buttons.rs  input_text.rs  key_queue.rs  map_and_path.rs  rect_utils.rs  searcher.rs
